# EFrame

./: CMakeLists.txt  CMakeSettings.json  CpDll.bat
network/: CMakeLists.txt  udpsocketbase.cpp
